[gd_scene load_steps=4 format=2]

[ext_resource path="res://PopupNbJoueurs.gd" type="Script" id=1]
[ext_resource path="res://PopupTaillePlateau.gd" type="Script" id=2]
[ext_resource path="res://creer.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.81894
margin_top = 2.05054
margin_right = 2.81885
margin_bottom = 2.0506
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btNbJoueurs" type="Button" parent="."]
anchor_left = 0.351
anchor_top = 0.152
anchor_right = 0.53
anchor_bottom = 0.247
margin_left = 18.576
margin_top = -49.2
margin_right = 9.27997
margin_bottom = -49.2
text = "Nombre de joueurs"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btTaillePlateau" type="Button" parent="."]
anchor_left = 0.07
anchor_top = 0.167
anchor_right = 0.07
anchor_bottom = 0.167
margin_left = 307.421
margin_top = 28.024
margin_right = 481.421
margin_bottom = 85.024
text = "Taille du plateau"

[node name="PopupNbJoueurs" type="PopupMenu" parent="."]
anchor_left = 1.144
anchor_right = 2.011
anchor_bottom = 1.667
margin_left = -583.456
margin_top = 204.0
margin_right = -1330.26
margin_bottom = -725.2
hide_on_state_item_selection = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PopupTaillePlateau" type="PopupMenu" parent="."]
anchor_left = 1.144
anchor_right = 2.011
anchor_bottom = 1.667
margin_left = -583.456
margin_top = 295.0
margin_right = -1330.26
margin_bottom = -634.2
hide_on_state_item_selection = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btCreerPartie" type="Button" parent="."]
margin_left = 319.885
margin_top = 412.16
margin_right = 587.885
margin_bottom = 502.16
text = "Creer la partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="btRetour" type="Button" parent="."]
margin_left = 828.0
margin_top = 526.0
margin_right = 1004.0
margin_bottom = 587.0
text = "Retour"

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 375.0
margin_top = 225.0
margin_right = 553.0
margin_bottom = 279.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckButton" type="CheckButton" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 171.0
margin_bottom = 47.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PanelContainer"]
margin_left = 7.0
margin_top = 20.0
margin_right = 171.0
margin_bottom = 34.0
text = "Mot de passe"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="."]
visible = true
margin_left = 635.0
margin_top = 219.0
margin_right = 858.0
margin_bottom = 304.0
window_title = "Alerte !"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 215.0
margin_bottom = 49.0
[connection signal="pressed" from="btNbJoueurs" to="PopupNbJoueurs" method="_on_btNbJoueurs_pressed"]
[connection signal="pressed" from="btTaillePlateau" to="PopupTaillePlateau" method="_on_btTaillePlateau_pressed"]
[connection signal="id_pressed" from="PopupNbJoueurs" to="." method="_on_PopupNbJoueurs_pressed"]
[connection signal="id_pressed" from="PopupTaillePlateau" to="." method="_on_PopupTaillePlateau_pressed"]
[connection signal="pressed" from="btCreerPartie" to="." method="_on_Button3_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="btRetour" to="." method="_on_Button4_pressed"]
